--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="./css/main.css">    
 
-    <title>Libreria WEB!.</title>
+    <title>Libreria WEB!..</title>
   </head>
   <body>
 
