--- a/frontend/Perfil.html
+++ b/frontend/Perfil.html
@@ -23,7 +23,7 @@
                                 <h2 class="font-weight-bold mt-4">Juan CHS99</h2>
                                 
                                 <!-- Link que lleva al formulario para editar el perfil -->
-                                <a href="EditarPerfil.html"><i class="far fa-edit fa-2x mb-4"></i></a>
+                                <a href="EditarPerfil.php"><i class="far fa-edit fa-2x mb-4"></i></a>
                             </div>
                         </div>
                         <div class="col-sm-8 bg-white rounded-right">
