--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,11 +37,11 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="login.html">Iniciar Sesion</a>
+              <a class="nav-link" href="login.php">Iniciar Sesion</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="registro.html">Registrarse</a>
+              <a class="nav-link" href="../registro.php">Registrarse</a>
             </li>
 
             <li class="nav-item">
