--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- ENCABEZADO -->
     <header class="container-fluid bg-primary d-flex
                    justify-content-center">
-      <p class="text-warning mb-1 p-2 fs-5">Contactos +57 301111111111</p>
+      <p class="text-warning mb-1 p-2 fs-5">CONTACTOS +57 301213548</p>
     </header>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light p-3" id="menu">
@@ -33,24 +33,21 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="index.html">INICIO</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="login.php">Iniciar Sesion</a>
+              <a class="nav-link" href="login.php">INICIAR SESIÓN</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="registro.php">Registrarse</a>
+              <a class="nav-link" href="registro.php">REGISTRARSE</a>
             </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="#">Informacion</a>
-            </li>
+        
           </ul>  
           <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Libro" aria-label="Search">
-            <button class="btn btn-primary btn-primary-outline-success" type="button">Buscar</button>
+            <button class="btn btn-primary btn-primary-outline-success" type="button">BUSCAR</button>
           </form>
         </div>
       </div>
@@ -62,15 +59,15 @@
         <div class="carousel-inner">
 
           <div class="carousel-item active" data-bs-interval="3000">
-            <img src="src/img/img1.png" class="d-block w-10" width="300px" alt="img1">
+            <img src="src/img/img5.jpg" class="d-block w-10" width="3000px" alt="img1">
           </div>
 
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="src/img/img2.jfif" class="d-block w-100" alt="img2">
+            <img src="src/img/img6.jpg" class="d-block w-100" alt="img6">
           </div>
 
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="src/img/img3.jfif" class="d-block w-100" alt="img3">
+            <img src="src/img/img3.jpg" class="d-block w-100" alt="img3">
           </div>
 
         </div>
@@ -90,10 +87,10 @@
       <!-- INTRO -->
 
       <section class="w-50 mx-auto text-center pt-5" id="intro">
-        <h1 class="p-3 fs-2 border-top border-3">Libreria virtual unica para todas tus necesidades
+        <h1 class="p-3 fs-2 border-top border-3">Librería virtual única para todas tus necesidades
            <span class="text-warning"> LECTORAS </span></h1>
-        <p class="p-3 fs-1"><span class="text-warning"> WANOTE </span>Es una libreria virtual donde te ayudamos a establecer tu presencia en linea.
-        Libros WEB, Informes Digitales.</p>
+        <p class="p-3 fs-1"><span class="text-warning"> WANOTE </span>Es una librería virtual donde te ayudamos a establecer tu presencia en línea.
+          Libros WEB, Informes Digitales, entre otros.  </p>
       </section>
 
       <!-- Servicios -->
@@ -101,7 +98,7 @@
         <div class="row w-75 mx-auto my-5 servicio-fila">
           <div class="col-lg-6 col-md-12 d-flex 
                           my-5 icono-wrap">
-            <img src="src/img/img1.png" alt="desarrollo" width="180" height="160">
+            <img src="src/img/img1.png" alt="desarrollo" width="200" height="200">
             <div>
                 <h3 class="fs-5 mt-4 px-4 pb-1"> INFORMACION </h3>
               <p class="px-4">Dir: </p>
@@ -109,10 +106,10 @@
           </div>
 
           <div class="col-lg-6 col-md-12 d-flex " >
-            <img src="src/img/img4.jfif" alt="desarrollo" width="180" height="160">
+            <img src="src/img/img4.jpg" alt="desarrollo" width="200" height="200">
             <div>
                 <h3 class="fs-5 mt-4 px-4 pb-1"> DESARROLLO </h3>
-              <p class="px-4">Desarrollo de aplicaciones WEB, moviles y escritorio</p>
+              <p class="px-4">Desarrollo de aplicaciones WEB, móviles y escritorio</p>
             </div>
           </div>
 
